--- a/projetsPerso/annuaireBenevoles/assets/style.css
+++ b/projetsPerso/annuaireBenevoles/assets/style.css
@@ -9,6 +9,10 @@ section {
     background-color: rgb(153, 197, 200);
 }
 
+.alterVolonteer {
+    background-color: rgb(153, 197, 200);
+}
+
 .title {
     margin-top: 60px;
 
